<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_BaseCommunicatorMassege" Id="{d2956b33-e0a3-00fe-217d-27d07a890ff6}">
    <Declaration><![CDATA[TYPE ST_BaseCommunicatorMassege :
STRUCT
	sText				: STRING;
	bToPickUp			: BOOL;		//informacja ze komunikat jest aktualny, po odebraniu przez odbiorce flaga znika
	bValue				: BOOL;
	rValue				: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>