<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_CommunicatorStack" Id="{f3df0a22-2d82-062c-18b5-7c2b5a82b67e}">
    <Declaration><![CDATA[TYPE ST_CommunicatorStack :
STRUCT
	stMessage					: ST_CommunicatorMassege;
	bSent						: BOOL;		//wysłane
	bConfirmation				: BOOL;		//potwierdzenie
	itfSender					: ITF_MessengerSender;
	itfRecipient				: ITF_MessengerRecipient;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>